tests/failing/missing_type.rgo
exit: @/exit
omega: (x:(x, k:()), k:()){
    x(x, k)
}

start: (){ omega(omega, start) }
start()
